--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,26 +3,60 @@ body {
 	height: 100%;
 }
 
-.wrapper {
+body {
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 26px;
+	color: $text;
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
 }
+
+// a {
+// 	color: #fff;
+// }
+
 
 .main {
-	flex: 1 0 auto;
-}
-.footer {
-	flex: 0 0 auto;
-}
-
-.container{
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
+	flex-grow: 1;
 }
 
 
 
+.container-fluid {
+	max-width: 1920px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
+.container-fluid.container-pink {
+	background-color: #fdddcf;
+	position: relative;
+	
+}
+.container-fluid.container-footer {
+	background-color: #1E212C;
+
+}
+
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
 
 
+.btn {
+	background: $gradient;
+	color: #fff;
+	font-size: 16px;
+	line-height: 52px;
+	border-radius: 4px;
+	border: 1px solid linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+}
+
+.btn.btn-white {
+	background: transparent;
+	color: $accent;
+}
