--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -53,10 +53,22 @@ body {
 	font-size: 16px;
 	line-height: 52px;
 	border-radius: 4px;
-	border: 1px solid linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
+	padding: 0 40px;
+	border: 1px solid #FF3F3A;
+	transition: all .3s ease-in-out;
+
+	&:hover {
+		transform: scale(1.03);
+	}
 }
 
 .btn.btn-white {
 	background: transparent;
 	color: $accent;
+	border: 1px solid #FF3F3A;
+	transition: all .3s ease-in-out;
+
+	&:hover {
+		transform: scale(1.03);
+	}
 }
