--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -13,9 +13,7 @@ body {
 	flex-direction: column;
 }
 
-// a {
-// 	color: #fff;
-// }
+
 
 
 .main {
@@ -54,11 +52,12 @@ body {
 	line-height: 52px;
 	border-radius: 4px;
 	padding: 0 40px;
+	font-weight: 700;
 	border: 1px solid #FF3F3A;
 	transition: all .3s ease-in-out;
-
 	&:hover {
 		transform: scale(1.03);
+		box-shadow: 0px 80px 80px -20px rgba(255, 63, 58, 0.16), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
 	}
 }
 
