--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -311,14 +311,17 @@
         font-weight: 900;
         margin-bottom: 44px;
     }
+
     &__btn-box {
         display: flex;
         justify-content: start;
-    }   
-    &__btn {    
+    }
+
+    &__btn {
         transition: all .3s ease-in-out;
         width: 100%;
         max-width: 201px;
+
         &:hover {
             transform: scale(1.04);
         }
@@ -326,6 +329,7 @@
         &+.btn {
             margin-left: 15px;
         }
+
         &.btn-white {
             max-width: 148px;
             width: 100%;
@@ -400,6 +404,8 @@
         text-transform: uppercase;
         color: $title;
         margin-bottom: 8px;
+        font-size: 16px;
+        font-weight: 700;
     }
 
     &__title {
@@ -431,7 +437,8 @@
 
         }
     }
-    &__btn {    
+
+    &__btn {
         max-width: 161px;
         width: 100%;
         display: flex;
@@ -441,16 +448,117 @@
         letter-spacing: .5;
     }
 
-    // &__btn-box {
-    //     a {
-    //         line-height: 52px;
-    //     }
-    //     transition: all .3s ease-in-out;
-    //     width: 100%;
-    //     &:hover {
-    //         transform: scale(1.02);
-    //     }
-    // }
+}
+
+
+.courses {
+    &__inner {
+        padding-bottom: 180px;
+    }
+
+    &__head-box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 60px;
+        position: relative;
+    }
+
+    &__title-box {
+        max-width: 400px;
+        width: 100%;
+    }
+
+    &__suptitle {
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        color: $text;
+        font-weight: 700;
+        font-size: 16px;
+        margin-bottom: 8px;
+    }
+
+    &__title {
+        @extend %title;
+
+    }
+
+    &__btn {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+
+    &__item {
+        max-width: 600px;
+        height: 214px;
+        width: 100%;
+        display: flex;
+        border: 1px solid #E5E8ED;
+        box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+        border-radius: 4px;
+        transition: all .3s ease-in-out;
+        &:hover {
+            transform: scale(1.01   );
+            box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
+        }
+    }
+
+    &__item-box {
+        padding: 33px;       
+
+        a {
+            display: block;
+        }
+    }
+
+    &__item-spec {
+        max-width: 112px;
+        width: 100%;
+        font-size: 14px;
+        color: #fff;        
+        text-align: center;
+        border-radius: 4px;
+        margin-bottom: 15px;
+    }
+    &__item-spec--green {
+        background-color: #03cea4;
+    }
+    &__item-spec--blue {
+        background-color: #5a87fc;
+    }
+    &__item-spec--orange {
+        background-color: #f3982f;
+    }
+    &__item-spec--rose {
+        background-color: #f13571;
+    }
+    &__item-course {
+        max-width: 322px;
+        width: 100%;
+        @extend %title-sml;
+        margin-bottom: 20px;
+    }
+
+    &__item-info {
+        display: flex;
+        font-size: 18px;
+        line-height: 27px;
+        
+    }
+    &__author {
+        color: #787A80;
+    }
+    &__price {
+        margin-right: 6px;
+        color: $accent;
+        font-weight: 700;
+    }
+    &__list {
+        display: grid;
+        grid-auto-flow: dense;
+        grid-template-columns: repeat( auto-fit, minmax(470px, 2fr) );      
+        gap: 30px;
+    }
 }
 
 @import 'media';
