--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,8 +31,9 @@ body {
 .container-fluid.container-pink {
 	background-color: #fdddcf;
 	position: relative;
-	
+
 }
+
 .container-fluid.container-footer {
 	background-color: #1E212C;
 
@@ -46,15 +47,16 @@ body {
 
 
 .btn {
-	background: $gradient;
+	background: $accent;
 	color: #fff;
 	font-size: 16px;
-	line-height: 52px;
+	// line-height: 52px;
 	border-radius: 4px;
-	padding: 0 40px;
+	padding: 20px 40px;
 	font-weight: 700;
-	border: 1px solid #FF3F3A;
+	border: 1px solid transparent;
 	transition: all .3s ease-in-out;
+
 	&:hover {
 		transform: scale(1.03);
 		box-shadow: 0px 80px 80px -20px rgba(255, 63, 58, 0.16), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
@@ -66,8 +68,12 @@ body {
 	color: $accent;
 	border: 1px solid #FF3F3A;
 	transition: all .3s ease-in-out;
-
+	
 	&:hover {
 		transform: scale(1.03);
+		background-color: #FF3F3A;
+		color: #fff;
+		box-shadow: 0px 80px 80px -20px rgba(255, 63, 58, 0.16), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
 	}
 }
+
