--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -8,10 +8,20 @@ $gradient:  linear-gradient(55.95deg, #FF3F3A 0%, #F75E05 100%);
     line-height: 60px;
     font-weight: 900;
     color: #1E212C;
+    text-align: center;
 }
 %title-sml {
     font-size: 20px;
     line-height: 30px;
     font-weight: 700;
     color: #1E212C;
+}
+%title-sup {
+    font-weight: 700;
+	font-size: 16px;
+	color: $title;
+	text-align: center;
+	margin-bottom: 8px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
 }
