added section team

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -34,9 +34,12 @@ body {
 
 }
 
-.container-fluid.container-footer {
+.container-fluid.container-footer{
 	background-color: #1E212C;
 
+}
+.container-fluid.container-grey {
+	background-color: #F4F5F6;
 }
 
 .container {
