--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,6 +19,7 @@
         max-width: 130px;
         width: 100%;
         margin-right: 60px;
+        object-fit: cover;
     }
 
     &__menu {
@@ -104,6 +105,7 @@
         max-width: 130px;
         width: 100%;
         margin-bottom: 24px;
+        object-fit: cover;
     }
 
     &__text {
@@ -202,6 +204,7 @@
         height: 7px;
         top: 70px;
         right: 15px;
+        object-fit: cover;
     }
 
     &__form-descr {
@@ -264,6 +267,7 @@
     &-right__img {
         position: absolute;
         bottom: 0;
+        object-fit: cover;
     }
 
     &-left__img {
@@ -310,6 +314,7 @@
         img {
             width: 52px;
             height: 52px;
+            object-fit: cover;
         }
     }
 
@@ -829,6 +834,7 @@
 
         img {
             transition: all .3s ease-in-out;
+            object-fit: cover;
         }
 
         &:hover {
@@ -908,6 +914,7 @@
 
     &__slider-img {
         border-radius: 4px;
+        object-fit: cover;
 
     }
 
@@ -1121,7 +1128,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-         
+
     }
 
     &__post {
@@ -1181,16 +1188,19 @@
     &-post__category {
         transition: all .3s;
         width: 64px;
+
         &:hover {
             color: $accent;
             font-weight: 700;
         }
     }
+
     &-post__descrption-item {
-        & + .blog-post__descrption-item {
+        &+.blog-post__descrption-item {
             margin-left: 12px;
             padding-left: 36px;
             position: relative;
+
             &::before {
                 content: "";
                 width: 1px;
@@ -1202,40 +1212,42 @@
             }
         }
     }
-   
+
     &-post__date::after {
         content: "";
-                width: 15px;
-                height: 15px;
-                position: absolute;
-                background-image: url(../images/post-calendar.png);
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                left: 11px;
-                top: 2px;
+        width: 15px;
+        height: 15px;
+        position: absolute;
+        background-image: url(../images/post-calendar.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        left: 11px;
+        top: 2px;
     }
 
     &-post__duration::after {
         content: "";
-                width: 15px;
-                height: 15px;
-                position: absolute;
-                background-image: url(../images/post-clock.png);
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                left: 11px;
-                top: 2px;
+        width: 15px;
+        height: 15px;
+        position: absolute;
+        background-image: url(../images/post-clock.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        left: 11px;
+        top: 2px;
     }
 
     &-post__title {
         @extend %title-sml;
         transition: all .3s;
+
         &:hover {
             color: $accent;
         }
     }
+
     &-post__text {
         margin-bottom: 16px;
     }
@@ -1248,17 +1260,164 @@
         position: relative;
         transition: all .3s;
         text-transform: capitalize;
-        &:hover {            
+
+        &:hover {
             color: $accent;
         }
+
         svg {
-           position: absolute;
-           top: 2px;
-           right: 5px;
+            position: absolute;
+            top: 2px;
+            right: 5px;
         }
-     
+
     }
 
+}
+
+//courses page
+
+.courses-list {
+    &__inner {
+        
+        padding-bottom: 120px;
+    }
+
+    &__title-box {
+        max-width: 440px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    &__suptitle {
+        @extend %title-sup;
+    }
+
+    &__title {
+        @extend %title;
+        margin-bottom: 60px;
+    }
+
+    &__categories {
+        margin-bottom: 70px;
+        display: flex;
+        justify-content: start;
+
+        button {
+            background-color: transparent;
+            border: 1px solid transparent;
+            border-radius: 4px;
+            font-weight: 700;
+            color: #9A9CA5;
+            padding: 10px 20px;
+            transition: all .2s;
+            cursor: pointer;
+
+            &:hover {
+                color: $accent;
+                border: 1px solid $accent;
+            }
+
+            &+button {
+                margin-left: 2px;
+            }
+        }
+
+        input {
+            width: 315px;
+
+            padding: 12px 46px 12px 16px;
+            font-size: 14px;
+            color: #9A9CA5;
+            border: 1px solid #D7DADD;
+            outline-color: $accent;
+
+        }
+
+    }
+
+    &__search-box {
+        width: 315px;
+        position: relative;
+        margin-left: 100px;
+
+        input:focus-within {
+
+            svg {
+                stroke: $accent;
+            }
+        }
+
+        &:hover {
+            svg {
+                stroke: $accent;
+            }
+        }
+
+        label {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+
+        }
+    }
+
+    &__content {
+        display: grid;
+        grid-auto-flow: dense;
+        justify-items: center;
+        grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+        gap: 30px;
+        padding-bottom: 80px;
+    }
+
+    &__content-item {
+        max-width: 390px;
+        width: 100%;
+        box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+        border-radius: 4px;
+        border: 1px solid #E5E8ED;
+        transition: all .3s ease-in-out;
+
+        &:hover {
+            box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.06);
+            transform: scale(1.02);
+        }
+    }
+    &__load-box {
+        display: flex;
+        justify-content: center;
+        flex-basis: 100% ;
+        width: 130px;   
+        margin: 0 auto;
+        transition: all .3s;
+        &:hover {
+            svg {
+                stroke: $accent;
+                
+            } 
+        }
+      
+
+       
+    }
+    &__link {
+        font-weight: 700;        
+        text-align: center;        
+        display: block;
+        margin-left: 20px;
+        transition: all .3s;
+       
+        &:hover {
+            color: $accent;
+             
+        }
+    }
+
+    .courses__item-box {
+        padding: 20px;
+
+    }
 }
 
 
